Fixed few ui bugs on mobile
Picked from b27b0f126f

--- a/symphony/assets/css/src/admin.less
+++ b/symphony/assets/css/src/admin.less
@@ -319,7 +319,6 @@ body {
 		> li {
 			display: block;
 			position: relative;
-			font-size: var(--text-current);
 			font-weight: 300;
 			line-height: 2rem;
 			cursor: pointer;
