--- a/symphony/assets/css/src/symphony.less
+++ b/symphony/assets/css/src/symphony.less
@@ -97,6 +97,7 @@ body {
 
 	@media (max-width: (@sm - 1)){
 		padding-left: 0;
+		font-size: var(--text-big);
 	}
 }
 
